--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^9.88.0",
-    "@react-three/fiber": "^8.15.19",
+    "@react-three/fiber": "8.2.2",
     "@sentry/nextjs": "^9.42.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.8.5",
